New : quick revamp

--- a/src/pages/2024-02-08-face-dansee-autre-soie/index.es.mdx
+++ b/src/pages/2024-02-08-face-dansee-autre-soie/index.es.mdx
@@ -3,7 +3,7 @@ path: /face-dansee-autre-soie
 layout: article
 category: portfolio
 language: es
-title: Face Dansée de l'Autre Soie
+title: L'Autre Soie
 subtitle: Augented Reality, Journey
 tags: xr
 description: Choreographic journey in augmented reality
