--- a/src/pages/2024-02-08-face-dansee-autre-soie/index.fr.mdx
+++ b/src/pages/2024-02-08-face-dansee-autre-soie/index.fr.mdx
@@ -3,7 +3,7 @@ path: /face-dansee-autre-soie
 layout: article
 category: portfolio
 language: fr
-title: Face Dansée de l'Autre Soie
+title: L'Autre Soie
 subtitle: Parcours, Réalité Augmentée
 tags: xr
 description: Parcours dansé en Réalité Augmentée
