--- a/src/pages/2023-12-01-conte-dun-futur-commun/index.mdx
+++ b/src/pages/2023-12-01-conte-dun-futur-commun/index.mdx
@@ -1,7 +1,7 @@
 ---
 path: /conte-dun-futur-commun
 layout: article
-category: portfolio
+category: hidden
 language: en
 title: Tale of a Common Future
 subtitle: Immersive Performance
