--- a/src/pages/2023-12-01-conte-dun-futur-commun/index.es.mdx
+++ b/src/pages/2023-12-01-conte-dun-futur-commun/index.es.mdx
@@ -1,11 +1,12 @@
 ---
 path: /conte-dun-futur-commun
 layout: article
-category: portfolio
+category: hidden
 language: es
 title: Tale of a Common Future
 subtitle: Immersive Performance
 tags: other
+category: hidden
 description: Immersive performance interpreted by a storyteller, a musician, and an illustrator.
 date: '2023-01-01'
 image: cover.jpg
