--- a/src/pages/2023-12-01-conte-dun-futur-commun/index.fr.mdx
+++ b/src/pages/2023-12-01-conte-dun-futur-commun/index.fr.mdx
@@ -1,11 +1,12 @@
 ---
 path: /conte-dun-futur-commun
 layout: article
-category: portfolio
+category: hidden
 language: fr
 title: Conte d'un Futur Commun
 subtitle: Spectacle immersif
 tags: other
+category: hidden
 description: Spectacle immersif interprété par une conteuse, un musicien et un illustrateur.
 date: '2023-01-01'
 image: cover.jpg
