New : wonderbox video and new profile pic

--- a/src/pages/2024-01-04-wonderbox/index.fr.mdx
+++ b/src/pages/2024-01-04-wonderbox/index.fr.mdx
@@ -15,7 +15,14 @@ embeddedImagesLocal:
 ---
 
 
-![Image d'illustration](cover.jpg)
+<ResponsiveIframe
+  src="https://www.youtube.com/embed/q-Hz3d8111k"
+  width="1920"
+  height="1080"
+/>
+
+[Lien Direct](https://www.youtube.com/watch?v=)
+
 
 
 Un spectacle mixant danse et diffusion sonore temps-réel
