--- a/src/pages/2024-01-04-wonderbox/index.mdx
+++ b/src/pages/2024-01-04-wonderbox/index.mdx
@@ -15,8 +15,14 @@ embeddedImagesLocal:
 ---
 
 
-![Image d'illustration](cover.jpg)
 
+<ResponsiveIframe
+  src="https://www.youtube.com/embed/q-Hz3d8111k"
+  width="1920"
+  height="1080"
+/>
+
+[Direct Link](https://www.youtube.com/watch?v=)
 
 A performance mixing dance and real-time sound diffusion.  
 
@@ -47,3 +53,5 @@ _...Complete list to come_
 <br/>
   
 _Photo Credits : Fanny Alton_
+
+
