--- a/src/pages/2024-01-04-wonderbox/index.es.mdx
+++ b/src/pages/2024-01-04-wonderbox/index.es.mdx
@@ -15,7 +15,14 @@ embeddedImagesLocal:
 ---
 
 
-![Image d'illustration](cover.jpg)
+<ResponsiveIframe
+  src="https://www.youtube.com/embed/q-Hz3d8111k"
+  width="1920"
+  height="1080"
+/>
+
+[Direct Link](https://www.youtube.com/watch?v=)
+
 
 
 A performance mixing dance and real-time sound diffusion.  
