--- a/src/pages/2024-01-04-wonderbox/index.es.mdx
+++ b/src/pages/2024-01-04-wonderbox/index.es.mdx
@@ -21,7 +21,7 @@ embeddedImagesLocal:
   height="1080"
 />
 
-[Direct Link](https://www.youtube.com/watch?v=)
+[Direct Link](https://www.youtube.com/watch?v=q-Hz3d8111k)
 
 
 
