--- a/src/pages/2024-01-04-wonderbox/index.fr.mdx
+++ b/src/pages/2024-01-04-wonderbox/index.fr.mdx
@@ -21,7 +21,7 @@ embeddedImagesLocal:
   height="1080"
 />
 
-[Lien Direct](https://www.youtube.com/watch?v=)
+[Lien Direct](https://www.youtube.com/watch?v=q-Hz3d8111k)
 
 
 
