--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -11,7 +11,7 @@ embeddedImagesLocal:
   - profile.jpg
 ---
 
-<MdxImage alt={"Portrait picture of Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} css={{borderRadius:'1000px'}} />
+<MdxImage alt={"Portrait picture of Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]}/>
 
 <br />
 <br />
