--- a/src/pages/2024-01-04-wonderbox/index.mdx
+++ b/src/pages/2024-01-04-wonderbox/index.mdx
@@ -22,7 +22,7 @@ embeddedImagesLocal:
   height="1080"
 />
 
-[Direct Link](https://www.youtube.com/watch?v=)
+[Direct Link](https://www.youtube.com/watch?v=q-Hz3d8111k)
 
 A performance mixing dance and real-time sound diffusion.  
 
