--- a/src/pages/2023-01-01-revy/index.fr.mdx
+++ b/src/pages/2023-01-01-revy/index.fr.mdx
@@ -1,40 +1,26 @@
 ---
-path: /reveality
+path: /revy
 layout: article
 category: portfolio
 language: fr
-title: Reveality
+title: Revy
 subtitle: Application, Réalité Augmentée
 tags: software, xr
 description: Application de création et diffusion pour la Réalité Augmentée
 date: '2023-01-01'
-image: cover.jpg
+image: cover2.jpg
 priority: 1
 embeddedImagesLocal:
-  - cover.jpg
+  - cover2.jpg
 ---
 
 
-Reveality est une application qui a pour but de rendre plus accessible la Réalité Augmentée aux différents acteurs du monde culturel.
+Revy est une application qui a pour but de rendre plus accessible la Réalité Augmentée aux différents acteurs du monde culturel.
 L'application prend la forme d'une boite à outils permettant : 
 * L'experimentation 
 * L'animation d'ateliers grand public
 * La création d'oeuvres XR complexes avec de la narration
 * La diffusion et la conservation d'oeuvres dans un catalogue commun à tous les créateurs
-  
-
-<br/>
-<br/>
-<br/>
-
-
-<ResponsiveIframe
-  src="https://www.youtube.com/embed/I7a_KLPCZgs"
-  width="1920"
-  height="1080"
-/>
-
-[Lien Direct](https://reveality.io/fr/education)
 
 
 ### Plus d'infos sur [reveality.io](https://reveality.io/)
