--- a/src/pages/2023-01-01-revy/index.mdx
+++ b/src/pages/2023-01-01-revy/index.mdx
@@ -1,21 +1,21 @@
 ---
-path: /reveality
+path: /revy
 layout: article
 category: portfolio
 language: en
-title: Reveality
+title: Revy
 subtitle: App, Augmented Reality
 tags: software, xr
 description: Creation and diffusion app for Augmented Reality
 date: '2023-01-01'
-image: cover.jpg
+image: cover2.jpg
 priority: 1
 embeddedImagesLocal:
-  - cover.jpg
+  - cover2.jpg
 ---
 
 
-Reveality is an app aiming to simplify Augmented Reality for cultural institutions and artists.
+Revy is an app aiming to simplify Augmented Reality for cultural institutions and artists.
 The app is a toolkit allowing multiple use cases such as : 
 * Experimentation and discovery of AR
 * AR Workshops for public of all ages 
@@ -23,26 +23,8 @@ The app is a toolkit allowing multiple use cases such as :
 * Diffusion platform for XR creators
 
 
-
-<br/>
-<br/>
-<br/>
-
-
-
-<ResponsiveIframe
-  src="https://www.youtube.com/embed/I7a_KLPCZgs"
-  width={1920}
-  height={1080}
-/>
-
-[Direct Link](https://reveality.io/fr/education)
-
 ### More infos on [reveality.io](https://reveality.io/)
 
 
-  
 ## Production
 Tom VENIAT, Maxime Touroute
-
-
