--- a/src/pages/2023-01-01-revy/index.es.mdx
+++ b/src/pages/2023-01-01-revy/index.es.mdx
@@ -1,45 +1,29 @@
 ---
-path: /reveality
+path: /revy
 layout: article
 category: portfolio
 language: es
-title: Reveality
+title: Revy
 subtitle: Aplicación, Realidad Aumentada
 tags: software, xr
 description: Aplicación para la creación y difusión de la Realidad Aumentada
 date: '2023-01-01'
-image: cover.jpg
+image: cover2.jpg
 priority: 1
 embeddedImagesLocal:
-  - cover.jpg
+  - cover2.jpg
 ---
 
 
-Reveality es una aplicación diseñada para hacer que la Realidad Aumentada sea más accesible para los diversos actores en el ámbito cultural. 
+Revy es una aplicación diseñada para hacer que la Realidad Aumentada sea más accesible para los diversos actores en el ámbito cultural. 
 La aplicación adopta la forma de una caja de herramientas que permite:
 * Experimentación
 * Taller público
 * Creación de obras de XR (Realidad Extendida) complejas con narración
 * Distribución y conservación de obras en un catálogo común para todos los creadores
 
-  
-
-<br/>
-<br/>
-<br/>
-
-
-<ResponsiveIframe
-  src="https://www.youtube.com/embed/I7a_KLPCZgs"
-  width="1920"
-  height="1080"
-/>
-
-[Enlace al sitio web](https://reveality.io/fr/education)
-
 
 ### Más información sobre [reveality.io](https://reveality.io/)
-
 
   
 ## Producción
