New : improve revy page

--- a/src/pages/2023-01-01-revy/index.es.mdx
+++ b/src/pages/2023-01-01-revy/index.es.mdx
@@ -15,18 +15,21 @@ embeddedImagesLocal:
 ---
 
 
-Revy es una aplicación diseñada para hacer que la Realidad Aumentada sea más accesible para los diversos actores en el ámbito cultural. 
-La aplicación adopta la forma de una caja de herramientas que permite:
-* Experimentación
-* Taller público
-* Creación de obras de XR (Realidad Extendida) complejas con narración
-* Distribución y conservación de obras en un catálogo común para todos los creadores
+Revy is a toolkit designed for creating cultural experiences in Augmented Reality (AR). It is available to artists, museums, and cultural organizations for their various projects (creation, education, heritage...).
 
+## What can I do with Revy?
+* Experiment with AR
+* Host public workshops
+* Create complex XR artworks with narrative elements
+* Distribute and archive XR projects in a shared catalog
 
-### Más información sobre [reveality.io](https://reveality.io/)
+### Created with Revy
+* [Street Art in Annonay](/mural-annonay/)
+* [Dance in Augmented Reality](//reveality.io/fr/the-invisible-party/#content)
+* [Heritage: La Porte Auguste](//reveality.io/fr/porte-auguste-nimes/#content)
 
-  
-## Producción
+### More information and examples on [reveality.io](https://reveality.io/)
+
+## Production
 Tom VENIAT, Maxime Touroute
-
 
