--- a/src/pages/2023-01-01-revy/index.fr.mdx
+++ b/src/pages/2023-01-01-revy/index.fr.mdx
@@ -14,16 +14,21 @@ embeddedImagesLocal:
   - cover2.jpg
 ---
 
+Revy est une boite à outils conçue pour la création d'expériences culturelles en Réalité Augmentée (RA). Elle est mise à disposition des artistes, musées, structures culturelles pour leurs différents projets (création, médiation, patrimoine...).
 
-Revy est une application qui a pour but de rendre plus accessible la Réalité Augmentée aux différents acteurs du monde culturel.
-L'application prend la forme d'une boite à outils permettant : 
-* L'experimentation 
-* L'animation d'ateliers grand public
-* La création d'oeuvres XR complexes avec de la narration
-* La diffusion et la conservation d'oeuvres dans un catalogue commun à tous les créateurs
+## Que puis-je faire avec Revy?
+* Experimenter en RA
+* Animer des ateliers grand public
+* Créer des oeuvres XR complexes avec de la narration
+* Diffuser et conserver mes projets RA dans un catalogue commun
 
+### Créé avec Revy
+* [Street Art à Annonay](/mural-annonay/)
+* [Dance en Réalité Augmentée](//reveality.io/fr/the-invisible-party/#content)
+* [Patrimoine : La porte Auguste](//reveality.io/fr/porte-auguste-nimes/#content)
+* [Grand Public : Expo photo Augmenté](//reveality.io/fr/environ-alger/#content)
 
-### Plus d'infos sur [reveality.io](https://reveality.io/)
+### Plus d'infos et exemples sur [reveality.io](https://reveality.io/)
 
 
   
