--- a/src/pages/2023-01-01-revy/index.mdx
+++ b/src/pages/2023-01-01-revy/index.mdx
@@ -14,17 +14,21 @@ embeddedImagesLocal:
   - cover2.jpg
 ---
 
+Revy is a toolkit designed for creating cultural experiences in Augmented Reality (AR). It is available to artists, museums, and cultural organizations for their various projects (creation, education, heritage...).
 
-Revy is an app aiming to simplify Augmented Reality for cultural institutions and artists.
-The app is a toolkit allowing multiple use cases such as : 
-* Experimentation and discovery of AR
-* AR Workshops for public of all ages 
-* Production of complex XR artworks
-* Diffusion platform for XR creators
+## What can I do with Revy?
+* Experiment with AR
+* Host public workshops
+* Create complex XR artworks with narrative elements
+* Distribute and archive XR projects in a shared catalog
 
+### Created with Revy
+* [Street Art in Annonay](/mural-annonay/)
+* [Dance in Augmented Reality](//reveality.io/fr/the-invisible-party/#content)
+* [Heritage: La Porte Auguste](//reveality.io/fr/porte-auguste-nimes/#content)
+* [General public : AR Photo Exhibition](//reveality.io/fr/environ-alger/#content)
 
-### More infos on [reveality.io](https://reveality.io/)
-
+### More information and examples on [reveality.io](https://reveality.io/)
 
 ## Production
 Tom VENIAT, Maxime Touroute
