--- a/src/pages/2023-03-01-live-maker/index.fr.mdx
+++ b/src/pages/2023-03-01-live-maker/index.fr.mdx
@@ -12,22 +12,152 @@ image: 26v_2_webw.jpg
 priority: 3
 embeddedImagesLocal:
 - 26v_2_webw.jpg
+- 2021_1_web.jpg
+- 20220709-AAA_0030.jpg
+- 20220818-AAA_0021.jpg
+
+- PaintingMirror_3.jpg 
+- PaintingMirror_2.jpg
+- PaintingMirror_4.jpg
+
+- 1.jpg
+- 2.jpg
+- 3.jpg
+
+- joystick.jpg
+- b-3.jpg
+- b-4.jpg 
+
+
 ---
 
 <br/>
 <br/>
 
-Live Maker est un outil permettant de transformer des smartphones en support d’interaction temps-réel (envoyer des photos, dessins, sons, joystick, accéléromètre…) ou en support de diffusion de contenus (vidéo, audio, vibreur, …).
+_Live Maker_ est un __logiciel mutualisé__ avec la communauté créative qui permet de transformer des smartphones en supports de diffusion et d’interaction.
 
-_Plus d'infos à venir..._
 
-### Ils utilisent ce logiciel
-* [Live Drawing](/livedrawing)
-* [Painting Mirror](/painting-mirror)
-* [Conte d'un Futur Commun](/conte-dun-futur-commun)
-* [Le Motel des Destins Croisés](/motel-destins-croises)
-* [La Bulle](/la-bulle)
-* [Monolith](/monolith)
-* [Babel](/babel)
+## Caractéristiques
+
+* **Récupération d’interactions en temps réel** : photos, dessins, sons, joystick, accéléromètre.
+* **Diffusion de contenus directement sur les smartphones** : vidéo, audio, texte, vibreur, flash.
+* **Aucune application à télécharger** : utilisation via une simple page web, accessible par lien ou QR Code.
+* **Jusqu'à 10,000 personnes en simultané** : qu'elles soient sur place ou réparties dans le monde entier.
+* **Fonctionne en 4G, en Wi-Fi, ou sans internet** : adapté à tous contextes.
+* **Contrôlable en live** : logiciel back-office pour gérer les interactions, et compatibilité OSC
+
+
+### Demandez l'accès ou plus d'infos sur [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+
+
+## Exemples d'interaction
+_Liste non exhaustive_
+
+<div style={{backgroundColor: '', display: 'flex', flexDirection: 'row', alignItems: 'center', justifyContent: 'space-between'}}>
+      <div style={{width: "33%"}}>
+
+      ### Gamepad
+
+<ResponsiveIframe
+  src="https://youtube.com/embed/5J16GKME4SE"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+              <div style={{width: "33%"}}>
+       ### Joystick
+<ResponsiveIframe
+  src="https://youtube.com/embed/bzQ6nPaoRfI"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+
+     
+                 <div style={{width: "33%"}}>
+          ### Vote
+<ResponsiveIframe
+  src="https://youtube.com/embed/UkP0KwxRn7M"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+        
+</div>
+
+<div style={{backgroundColor: '', display: 'flex', flexDirection: 'row', alignItems: 'center', justifyContent: 'space-between'}}>
+
+    <div style={{width: "33%"}}>
+          ### Dessin Multicouleur
+<ResponsiveIframe
+  src="https://youtube.com/embed/vRFPCrcx5xU"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+
+         <div style={{width: "33%"}}>
+          
+
+        </div> 
+
+         <div style={{width: "33%"}}>
+          ### Dessin Intuitif
+<ResponsiveIframe
+  src="https://youtube.com/embed/udvb6tbj2CA"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+
+</div>
+
+ ### Contrôle lumière
+<ResponsiveIframe
+  src="https://youtube.com/embed/KMXblserA1g"
+  width="1920"
+  height="1080"
+/>
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+## Exemples d'usages
+
+#### [Live Drawing](/livedrawing)
+Dessiner sur les murs et les façades de la ville.
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(1, 4)} />{' '}
+
+#### [Painting Mirror]()
+Envoyer des photos, elles sont transformées dans le style de célèbres peintres.
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(4, 7)} />{' '}
+
+
+#### [La Bulle](/la-bulle)
+Envoyer des cartes postales, créer des livres d'or numériques.
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(7, 10)} />{' '}
+
+
+#### [Babel](/babel)
+Jouer en multijoueur, en utilisant son téléphone comme manette.
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(10, 13)} />{' '}
+
+#### [Monolith](/monolith)
+_En écriture_  
+Contrôler les platines d'un musicien, improviser avec le public.
+
+#### [Le Motel des Destins Croisés](/motel-destins-croises)
+_En écriture_  
+Se faire guider au sein d'une expérience de théâtre immersive.
+
+#### [Latency](/latency)
+_En écriture_  
+Envoyer des photos pour nourrir une IA en temps-réel.
+
 
 ### Demandez l'accès ou plus d'infos sur [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
