New : improve live-maker page and software pages

--- a/src/pages/2023-01-01-revy/index.fr.mdx
+++ b/src/pages/2023-01-01-revy/index.fr.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: fr
 title: Revy
-subtitle: Application, Réalité Augmentée
+subtitle: Créer en Réalité Augmentée
 tags: software, xr
 description: Application de création et diffusion pour la Réalité Augmentée
 date: '2023-01-01'
