--- a/src/pages/2023-01-01-revy/index.mdx
+++ b/src/pages/2023-01-01-revy/index.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: en
 title: Revy
-subtitle: App, Augmented Reality
+subtitle: Create in Augmented Reality
 tags: software, xr
 description: Creation and diffusion app for Augmented Reality
 date: '2023-01-01'
