--- a/src/pages/2023-03-01-live-maker/index.es.mdx
+++ b/src/pages/2023-03-01-live-maker/index.es.mdx
@@ -4,31 +4,160 @@ layout: article
 category: portfolio
 language: es
 title: Live Maker
-subtitle: Software, Interacción pública
+subtitle: Audience Interaction through smartphones
 tags: software
-description: Herramienta para crear experiencias interactivas con smartphones
+description: Tool for creating interactive experiences with smartphones
 date: '2023-03-01'
-image: 26v_2_webw.jpg
-priority: 3
+image: cover.jpg
+priority: 1
 embeddedImagesLocal:
 - 26v_2_webw.jpg
+- 2021_1_web.jpg
+- 20220709-AAA_0030.jpg
+- 20220818-AAA_0021.jpg
+
+- PaintingMirror_3.jpg 
+- PaintingMirror_2.jpg
+- PaintingMirror_4.jpg
+
+- 1.jpg
+- 2.jpg
+- 3.jpg
+
+- joystick.jpg
+- b-3.jpg
+- b-4.jpg 
+
+
 ---
 
 <br/>
 <br/>
 
-Live Maker es una herramienta que transforma los teléfonos inteligentes en dispositivos de interacción en tiempo real (enviar fotos, dibujos, sonidos, joystick, acelerómetro...) o en dispositivos para la difusión de contenido (video, audio, vibración...).
-
-_Más información próximamente..._
+_Live Maker_ is a **shared software** for the creative community that transforms smartphones into broadcasting and interaction platforms.
 
 
-### Ellos utilizan este software
-* [Live Drawing](/livedrawing)
-* [Painting Mirror](/painting-mirror)
-* [Conte d'un Futur Commun](/conte-dun-futur-commun)
-* [Le Motel des Destins Croisés](/motel-destins-croises)
-* [La Bulle](/la-bulle)
-* [Monolith](/monolith)
-* [Babel](/babel)
+## Features
 
-### Solicite acceso o más información en [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+* **Real-time interaction retrieval**: photos, drawings, sounds, joystick, accelerometer.
+* **Direct content broadcasting on smartphones**: video, audio, text, vibrator, flash.
+* **No app download required**: accessible via a simple web page through a link or QR code.
+* **Supports up to 10,000 simultaneous users**: whether onsite or spread across the globe.
+* **Works on 4G, Wi-Fi, or offline**: adaptable to any context.
+* **Live control**: back-office software for managing interactions and OSC compatibility.
+
+
+### Request access or more info at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+
+
+## Interaction Examples
+_Non-exhaustive list_
+
+<div style={{backgroundColor: '', display: 'flex', flexDirection: 'row', alignItems: 'center', justifyContent: 'space-between'}}>
+      <div style={{width: "33%"}}>
+
+      ### Gamepad
+
+<ResponsiveIframe
+  src="https://youtube.com/embed/5J16GKME4SE"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+              <div style={{width: "33%"}}>
+       ### Joystick
+<ResponsiveIframe
+  src="https://youtube.com/embed/bzQ6nPaoRfI"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+
+     
+                 <div style={{width: "33%"}}>
+          ### Vote
+<ResponsiveIframe
+  src="https://youtube.com/embed/UkP0KwxRn7M"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+        
+</div>
+
+<div style={{backgroundColor: '', display: 'flex', flexDirection: 'row', alignItems: 'center', justifyContent: 'space-between'}}>
+
+    <div style={{width: "33%"}}>
+          ### Multicolor Drawing
+<ResponsiveIframe
+  src="https://youtube.com/embed/vRFPCrcx5xU"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+
+         <div style={{width: "33%"}}>
+          
+
+        </div> 
+
+         <div style={{width: "33%"}}>
+          ### Intuitive Drawing
+<ResponsiveIframe
+  src="https://youtube.com/embed/udvb6tbj2CA"
+  width="1080"
+  height="1920"
+/>
+        </div> 
+
+</div>
+
+ ### Light Control
+<ResponsiveIframe
+  src="https://youtube.com/embed/KMXblserA1g"
+  width="1920"
+  height="1080"
+/>
+
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+## Usage Examples
+
+#### [Live Drawing](/livedrawing)
+Draw on walls and city facades.
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(1, 4)} />{' '}
+
+#### [Painting Mirror]()
+Send photos and have them transformed in the style of famous painters.
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(4, 7)} />{' '}
+
+
+#### [La Bulle](/la-bulle)
+Send postcards, create digital guestbooks.
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(7, 10)} />{' '}
+
+
+#### [Babel](/babel)
+Play multiplayer games using your phone as a controller.
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(10, 13)} />{' '}
+
+#### [Monolith](/monolith)
+_In progress_  
+Control a musician's equipment, improvise with the audience.
+
+#### [The Motel of Crossed Destinies](/motel-destins-croises)
+_In progress_  
+Be guided through an immersive theater experience.
+
+#### [Latency](/latency)
+_In progress_  
+Send photos to feed an AI in real-time.
+
+
+### Request access or more info at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
