--- a/src/pages/2023-03-01-live-maker/index.fr.mdx
+++ b/src/pages/2023-03-01-live-maker/index.fr.mdx
@@ -4,12 +4,12 @@ layout: article
 category: portfolio
 language: fr
 title: Live Maker
-subtitle: Logiciel, Interaction public
+subtitle: Interaction public avec smartphones
 tags: software
 description: Outil pour créer des expériences interactives avec des smartphones
 date: '2023-03-01'
-image: 26v_2_webw.jpg
-priority: 3
+image: cover.jpg
+priority: 1
 embeddedImagesLocal:
 - 26v_2_webw.jpg
 - 2021_1_web.jpg
