--- a/src/pages/2023-03-01-live-maker/index.mdx
+++ b/src/pages/2023-03-01-live-maker/index.mdx
@@ -4,12 +4,12 @@ layout: article
 category: portfolio
 language: en
 title: Live Maker
-subtitle: Software, Audience Interaction
+subtitle: Audience Interaction through smartphones
 tags: software
 description: Tool for creating interactive experiences with smartphones
 date: '2023-03-01'
-image: 26v_2_webw.jpg
-priority: 3
+image: cover.jpg
+priority: 1
 embeddedImagesLocal:
 - 26v_2_webw.jpg
 - 2021_1_web.jpg
