--- a/src/pages/2024-10-01-mural-annonay/index.fr.mdx
+++ b/src/pages/2024-10-01-mural-annonay/index.fr.mdx
@@ -47,7 +47,7 @@ Une fresque monumentale de 200 m² dans le quartier populaire du Zodiaque à [An
 * __Ateliers participatifs et chantier d’insertion sociale et professionnelle :__ 10+ jeunes employés pour une démarche d'insertion
 * __Création dirigée par les habitants :__ choix des contenus et couleurs ; création des contenus en Réalité Augmentée
 * __Réalité Augmentée :__ en filmant la fresque, des récits sonores et vidéos racontent l'histoire des habitants
-* __Projet évolutif :__ avec Revy, les habitants et organismes locaux peuvent animer leurs propres ateliers et enrichir la fresque avec de nouveaux contenus
+* __Projet évolutif :__ avec [Revy](/revy), les habitants et organismes locaux peuvent animer leurs propres ateliers et enrichir la fresque avec de nouveaux contenus
 
 
 ## Un récit en Réalité Augmentée
@@ -92,9 +92,9 @@ Une grande inauguration réunissant les habitants et les artistes avec __perform
   height="1080"
 />
 
-## Powered by Revy 
+## Powered by [Revy](/revy) 
 
-La dimension de Réalité Augmentée a été rendue possible par les outils de création intuitifs inclus dans Revy - qui ont permis d'animer des ateliers où les publics s'emparent pleinement du processus de création et s'expriment par eux-mêmes.
+La dimension de Réalité Augmentée a été rendue possible par les outils de création intuitifs inclus dans [Revy](/revy) - qui ont permis d'animer des ateliers où les publics s'emparent pleinement du processus de création et s'expriment par eux-mêmes.
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal.slice(12,18)} />{' '}
 
