--- a/src/pages/2023-01-01-revy/index.es.mdx
+++ b/src/pages/2023-01-01-revy/index.es.mdx
@@ -4,16 +4,15 @@ layout: article
 category: portfolio
 language: es
 title: Revy
-subtitle: Aplicación, Realidad Aumentada
+subtitle: Create in Augmented Reality
 tags: software, xr
-description: Aplicación para la creación y difusión de la Realidad Aumentada
+description: Creation and diffusion app for Augmented Reality
 date: '2023-01-01'
 image: cover2.jpg
 priority: 1
 embeddedImagesLocal:
   - cover2.jpg
 ---
-
 
 Revy is a toolkit designed for creating cultural experiences in Augmented Reality (AR). It is available to artists, museums, and cultural organizations for their various projects (creation, education, heritage...).
 
@@ -27,9 +26,9 @@ Revy is a toolkit designed for creating cultural experiences in Augmented Realit
 * [Street Art in Annonay](/mural-annonay/)
 * [Dance in Augmented Reality](//reveality.io/fr/the-invisible-party/#content)
 * [Heritage: La Porte Auguste](//reveality.io/fr/porte-auguste-nimes/#content)
+* [General public : AR Photo Exhibition](//reveality.io/fr/environ-alger/#content)
 
 ### More information and examples on [reveality.io](https://reveality.io/)
 
 ## Production
 Tom VENIAT, Maxime Touroute
-
