--- a/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: fr
 title: Audio Broadcaster
-subtitle: Logiciel, Diffusion Audio temps-réel
+subtitle: Diffusion Audio temps-réel
 tags: software
 description: Logiciel de diffusion audio à ultra-faible latence à destination des artistes et lieux culturels
 date: '2023-03-01'
