--- a/src/pages/2023-03-01-audio-broadcaster/index.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: en
 title: Audio Broadcaster
-subtitle: Software, realtime audio broadcasting
+subtitle: Realtime audio broadcasting
 tags: software
 description: Audio broadcasting software with ultra-low latency for artists and cultural institutions
 date: '2023-03-01'
