New : update subtitle illumin

--- a/src/pages/2015-01-01-millumin/index.es.mdx
+++ b/src/pages/2015-01-01-millumin/index.es.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: es
 title: Millumin
-subtitle: Software
+subtitle: Projection Mapping, Live Shows
 tags: software
 description: Solución completa para crear espectáculos audiovisuales. Teatro, Danza, Videomapping, Instalaciones Interactivas
 date: '2015-01-01'
