--- a/src/pages/2015-01-01-millumin/index.mdx
+++ b/src/pages/2015-01-01-millumin/index.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: en
 title: Millumin
-subtitle: Software
+subtitle: Projection Mapping, Live Shows
 tags: software
 description: Complete solution to create Audiovisual Shows. Theater, Dance, Videomapping, Interactive installation
 date: '2015-01-01'
