--- a/src/pages/2015-01-01-millumin/index.fr.mdx
+++ b/src/pages/2015-01-01-millumin/index.fr.mdx
@@ -4,7 +4,7 @@ layout: article
 category: portfolio
 language: fr
 title: Millumin
-subtitle: Logiciel
+subtitle: Projection Mapping, Live Shows
 tags: software
 description: Solution complète pour créer des spectacles audiovisuels. Théâtre, Danse, Videomapping, Installations Interactives
 date: '2015-01-01'
