New : tip article & update ldp

--- a/src/pages/2018-11-30-the-live-drawing-project/index.es.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.es.mdx
@@ -8,7 +8,7 @@ subtitle: Mapping Interactivo, Dibujo
 tags: mapping
 description: Proyecto de arte digital que explora las posibilidades del dibujo participativo y colectivo en tiempo real.
 date: '2020-01-01'
-image: b.jpg
+image: 20220709-AAA_0030.jpg
 priority: 1
 embeddedImagesLocal:
   - 26v_2_webw.jpg
