--- a/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
@@ -8,7 +8,7 @@ subtitle: Mapping Interactif, Dessin
 tags: mapping
 description: Projet d'art numérique explorant les possibilités de dessin participatif et collectif en temps réel.
 date: '2020-01-01'
-image: b.jpg
+image: 20220709-AAA_0030.jpg
 priority: 1
 embeddedImagesLocal:
   - 26v_2_webw.jpg
