--- a/src/pages/2018-11-30-the-live-drawing-project/index.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.mdx
@@ -8,7 +8,7 @@ subtitle: Collaborative Drawing
 tags: mapping
 description: A digital arts project about experiencing the possibilities of collaborative and live drawing.
 date: '2020-01-01'
-image: b.jpg
+image: 20220709-AAA_0030.jpg
 priority: 1
 embeddedImagesLocal:
   - 26v_2_webw.jpg
