--- a/src/pages/2023-01-01-revy/index.fr.mdx
+++ b/src/pages/2023-01-01-revy/index.fr.mdx
@@ -5,7 +5,7 @@ category: portfolio
 language: fr
 title: Revy
 subtitle: Créer en Réalité Augmentée
-tags: software, xr
+tags: software
 description: Application de création et diffusion pour la Réalité Augmentée
 date: '2023-01-01'
 image: cover2.jpg
