--- a/src/pages/2023-01-01-revy/index.mdx
+++ b/src/pages/2023-01-01-revy/index.mdx
@@ -5,7 +5,7 @@ category: portfolio
 language: en
 title: Revy
 subtitle: Create in Augmented Reality
-tags: software, xr
+tags: software
 description: Creation and diffusion app for Augmented Reality
 date: '2023-01-01'
 image: cover2.jpg
