--- a/src/pages/2018-05-01-realite/index.mdx
+++ b/src/pages/2018-05-01-realite/index.mdx
@@ -20,7 +20,7 @@ A short movie about the elderly. Shot in a few hours with a real grandma.
 
 Not public.
 
-[Send me a mail](mailto:maxime.touroute@gmail.com) for a streaming link.
+[Send me a mail](mailto:contact@maximetouroute.com) for a streaming link.
 
 #### Synopsis
 
