--- a/src/pages/2022-09-01-painting-mirror/index.fr.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.fr.mdx
@@ -110,7 +110,7 @@ Tom VENIAT, Maxime TOUROUTE, Rémy DUPANLOUP
 
 ## Diffusion
 
-Contactez [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)  
+Contactez [contact@maximetouroute.com](mailto:contact@maximetouroute.com)  
 
 Le projet est simple à mettre en place.  
 [Télécharger la fiche technique type](./PaintingMirrorFicheTechnique2024FR.pdf)
