--- a/src/pages/2022-09-01-painting-mirror/index.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.mdx
@@ -110,7 +110,7 @@ Tom VENIAT, Maxime TOUROUTE, Rémy DUPANLOUP
 
 ## Booking
 
-Contact [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)  
+Contact [contact@maximetouroute.com](mailto:contact@maximetouroute.com)  
 
 The Project is simple to set up  
 [Download tech sheet](./PaintingMirrorTechnicalSheet2024EN.pdf)
