--- a/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
@@ -24,7 +24,7 @@ embeddedImagesLocal:
 _Audio Broadcaster_ est un __logiciel mutualisé__ avec les lieux culturels, musiciens, artistes numériques, et plus généralement la communauté créative. 
 Il permet de diffuser du son en direct vers des smartphones de manière très légère, sans matériel spécifique et sans application à installer. Le logiciel est mis à jour et amélioré __selon vos besoins__ pour débloquer un maximum de cas d'usages.
 
-### Accès sur demande à [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Accès sur demande à [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
   
 
 ## Caractéristiques 
@@ -50,7 +50,7 @@ Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio li
 * Concerts silencieux
 * Diffusions sonores à distance
 * Art sonore, créations originales
-* Une autre idée ? [Dites le nous !](mailto:maxime.touroute@gmail.com)
+* Une autre idée ? [Dites le nous !](mailto:contact@maximetouroute.com)
 
 ### Ils utilisent ce logiciel
 * [Of a Mind](/of-a-mind)
@@ -58,4 +58,4 @@ Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio li
 * [Smart Faune](/smart-faune)
 
 
-### Accès sur demande à [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Accès sur demande à [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
