--- a/src/pages/2023-03-01-audio-broadcaster/index.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.mdx
@@ -26,7 +26,7 @@ _Audio Broadcaster_ is a __shared software__ with cultural institutions, musicia
 The software allows simple real-time audio transmission to smartphones without the need for specific hardware or an app to install. The software is updated and improved __for your needs__ to unlock as many use cases as possible.
 
 
-### Ask for access at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Ask for access at [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
   
 
 ## Main features 
@@ -56,7 +56,7 @@ There is no app to download.
 * Silent concerts
 * Remote audio listening
 * Sound art, creations
-* Another idea? [Tell us!](mailto:maxime.touroute@gmail.com)
+* Another idea? [Tell us!](mailto:contact@maximetouroute.com)
 
 ### They use this software
 * [Of a Mind](/of-a-mind)
@@ -69,5 +69,5 @@ There is no app to download.
 
 
 
-### Ask for access at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Ask for access at [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
 
