--- a/src/pages/2023-03-01-live-maker/index.fr.mdx
+++ b/src/pages/2023-03-01-live-maker/index.fr.mdx
@@ -47,7 +47,7 @@ _Live Maker_ est un __logiciel mutualisé__ avec la communauté créative qui pe
 * **Contrôlable en live** : logiciel back-office pour gérer les interactions, et compatibilité OSC
 
 
-### Demandez l'accès ou plus d'infos sur [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Demandez l'accès ou plus d'infos sur [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
 
 
 ## Exemples d'interaction
@@ -160,4 +160,4 @@ _En écriture_
 Envoyer des photos pour nourrir une IA en temps-réel.
 
 
-### Demandez l'accès ou plus d'infos sur [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Demandez l'accès ou plus d'infos sur [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
