--- a/src/pages/2023-03-01-live-maker/index.mdx
+++ b/src/pages/2023-03-01-live-maker/index.mdx
@@ -47,7 +47,7 @@ _Live Maker_ is a **shared software** for the creative community that transforms
 * **Live control**: back-office software for managing interactions and OSC compatibility.
 
 
-### Request access or more info at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Request access or more info at [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
 
 
 ## Interaction Examples
@@ -160,4 +160,4 @@ _In progress_
 Send photos to feed an AI in real-time.
 
 
-### Request access or more info at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+### Request access or more info at [contact@maximetouroute.com](mailto:contact@maximetouroute.com)
