--- a/src/pages/2024-10-01-mural-annonay/index.fr.mdx
+++ b/src/pages/2024-10-01-mural-annonay/index.fr.mdx
@@ -114,7 +114,7 @@ Avec le soutien de l’école Jean Moulin du quartier du Zodiaque, de la Maison 
 
 # Intéressé.e pour faire un mural AR?
  
-[Contactez moi à maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)  
+[Contactez moi à contact@maximetouroute.com](mailto:contact@maximetouroute.com)  
 
 <br />
 <br />
