--- a/src/pages/2024-10-01-mural-annonay/index.mdx
+++ b/src/pages/2024-10-01-mural-annonay/index.mdx
@@ -115,7 +115,7 @@ Funded by the French government (Prefecture of Ardèche), the City of Annonay, a
 
 # Interested to make an AR Mural?
 
-[Contact me at maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+[Contact me at contact@maximetouroute.com](mailto:contact@maximetouroute.com)
 
 
 <br />
