--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -39,7 +39,7 @@ Being a full-fledged engineer, I'm not afraid to work with state of the art tech
 
 
 ### — Currently open to new projects 
-[maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+[contact@maximetouroute.com](mailto:contact@maximetouroute.com)
 
 <br/>
 <br/>
