--- a/src/pages/2023-01-01-la-bulle/index.mdx
+++ b/src/pages/2023-01-01-la-bulle/index.mdx
@@ -31,7 +31,7 @@ Participants can send pictures and messages from their phone at any time. Shared
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
   
 
-### Interested in this tech? [Reach me](mailto:maxime.touroute@gmail.com)
+### Interested in this tech? [Reach me](mailto:contact@maximetouroute.com)
 
 
   
